[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentbrain"
version = "2.0.0"
description = "Production-grade temporal entity memory system for LLM agents"
authors = [{name = "Fahrenheit Research"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pydantic>=2.0",
    "sqlite-vec>=0.1.0",
]

[project.optional-dependencies]
hermes = ["hermes-agent>=0.1"]
dev = ["pytest", "black", "ruff"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agentbrain*"]